refactor: Improve extension installation process